bin/tests/snapshots/impure_host_path__bf55fc488356eb3b21e5e8f1633e11e7_lint_stderr.snap
---
source: bin/tests/impure_host_path.rs
---
/usr/local/bin/bash
---
[impure_host_path] Warning: Found path outside the Nix store
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ /usr/local/bin/bash
   │ ─────────┬─────────  
   │          ╰─────────── /usr/local/ depends on the host system, use a package from nixpkgs instead
───╯
