bin/tests/snapshots/impure_host_path__ea3fecd77919a140da36d08d2c3e95fd_fix.snap
---
source: bin/tests/impure_host_path.rs
---
''
  #!/bin/bash
  /opt/homebrew/bin/brew install x
  /usr/bin/python3 -V
''
---
