bin/tests/snapshots/impure_host_path__f85757552420ee81e331c7908dfdb0b3_lint_errfmt.snap
---
source: bin/tests/impure_host_path.rs
---
"/usr/local/bin/jq . data.json"
---
<temp_file_path>>1:2:W:27:[impure_host_path] `/usr/local/` depends on the host system, use a package from nixpkgs instead
