bin/tests/snapshots/impure_host_path__f85757552420ee81e331c7908dfdb0b3_lint_stderr.snap
---
source: bin/tests/impure_host_path.rs
---
"/usr/local/bin/jq . data.json"
---
[impure_host_path] Warning: Found path outside the Nix store
   ╭─[ <temp_file_path>:1:2 ]
   │
 1 │ "/usr/local/bin/jq . data.json"
   │  ────────┬────────  
   │          ╰────────── /usr/local/ depends on the host system, use a package from nixpkgs instead
───╯
